--- a/javaspider/pom.xml
+++ b/javaspider/pom.xml
@@ -25,5 +25,26 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.10</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.11</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.6</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.gatein.common/common-logging -->
+        <dependency>
+            <groupId>org.gatein.common</groupId>
+            <artifactId>common-logging</artifactId>
+            <version>2.2.2.Final</version>
+        </dependency>
+
     </dependencies>
 </project>
