--- a/javaspider/pom.xml
+++ b/javaspider/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>common-logging</artifactId>
             <version>2.2.2.Final</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.18</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
